--- a/style.css
+++ b/style.css
@@ -4,16 +4,18 @@
   font-family: "Aboreto", sans-serif;
 }
 header {
-  height: 70px;
-  border: 1px solid;
+  height: 150px;
+  border: none;
+  background-color: #e09ae0;
 }
 
 header h1 {
-  border: 1px solid;
+  border: none;
   display: inline-block;
   float: left;
-  padding: 16px 24px;
+  padding: 25px 100px;
   text-transform: uppercase;
+  background-image: url("assets/back.webp");
 }
 header h1 a {
   transition: 0.3s;
@@ -25,10 +27,12 @@ header h1 a:hover {
 header ul {
   border: 1px solid;
   float: right;
+  background-color: #e09ae0;
+  border: 1px solid;
 }
 
 header ul li {
-  border: 1px solid;
+  border: none;
   padding: 24px;
   display: inline-block;
 }
@@ -37,7 +41,7 @@ header ul li a {
 }
 
 header ul li a:hover {
-  color: rgb(215, 162, 216);
+  color: #709ddd;
 }
 a {
   text-decoration: none;
@@ -45,7 +49,7 @@ a {
 .container {
   width: 90%;
   margin: 0 auto;
-  border: 1px solid;
+  border: none;
 }
 
 .container::after {
@@ -55,12 +59,14 @@ a {
 }
 
 .banner {
-  background-color: violet;
+  background-color: #e09ae0;
   padding: 100px;
 }
 
 section {
   padding: 50px;
+  background-color: #709ddd;
+  border: 1px solid;
 }
 
 .banner img {
@@ -72,24 +78,30 @@ section {
 .banner h2,
 .banner p {
   color: rgb(96, 116, 229);
+  text-align: left;
 }
 
 .banner h2 {
   margin-bottom: 10px;
+  font-family: "Rubik Maze", cursive;
+  font-size: 75px;
+  background-color: none;
 }
 
 .banner p {
-  font-size: 20px;
+  font-size: 50px;
 }
 
 .banner-left {
-  border: 1px solid;
+  border: 0px solid;
 }
 
 section h3 {
   padding-bottom: 20px;
   text-align: center;
-  margin: 20px;
+  text-size-adjust: 20px;
+  margin: 10px;
+  background-color: #709ddd;
 }
 
 section h3::after {
@@ -99,13 +111,60 @@ section h3::after {
   bottom: -1px;
   width: 400 px;
   height: 4px;
-  background-color: cornsilk;
   left: calc(50% -60px);
 }
 
-#about p {
-  text-align: justify;
+#about h3,
+p {
+  text-align: center;
   text-indent: 40px;
   line-height: 25px;
   margin-bottom: 15px;
+  font-size: 25px;
+}
+
+#profile h3,
+p {
+  text-align: center;
+  text-indent: 40px;
+  line-height: 25px;
+  margin-bottom: 15px;
+  font-size: 25px;
+}
+
+#subprofil {
+  margin-right: 25%;
+}
+
+#image {
+  margin-left: 20%;
+}
+
+#portofolio h3,
+p {
+  text-align: center;
+  text-indent: 40px;
+  line-height: 25px;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+#contact h3,
+p {
+  text-align: center;
+  text-indent: 40px;
+  line-height: 25px;
+  margin-bottom: 15px;
+  text-decoration-color: aquamarine;
+  font-size: 20px;
+  margin-right: 10%;
+}
+
+#phone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.material-symbols-outlined {
+  margin-bottom: 1%;
 }
